[tool.poetry]
name = "pfp-newfit-bot"
version = "0.1.0"
description = ""
authors = ["jsblair9 <james@lionsmouth.digital>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.7.3"
requests = "^2.27.1"
Pillow = "^9.1.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
